--- a/Calcolatrice/styles/app.css
+++ b/Calcolatrice/styles/app.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root {
+/* :root {
     --background-color: #212529;
     --secodary-background: #343a40;
     --primary-color: #495057;
@@ -9,17 +9,26 @@
     --accent-color-2: #faa307;
     --accent-color-3: #f48c06;
     --foreground-color: #f8f9fa;
-}
+} */
 
 /* Altri colori da provare */
-:root {
-    --background-color: #000000;
-    --secodary-background: #121212;
-    --accent-color-1: #eb004d;
-    --accent-color-2: #e99d01;
-    --foreground-color: #DCDCDC;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+:root {
+    --background-color: #000000;
+    --secodary-background: #131212;
+    --border: #a9a9a9;
+    --accent-color-1: #eb004d;
+    --accent-color-2: #e99d01;
+    --foreground-color: #dcdcdc;
+    --back-background-color: #5c00ff66;
+
+    --stroke: #007cff;
+}
 
 body {
     font-family: "Poppins", sans-serif;
@@ -33,8 +42,30 @@ body {
     color: var(--foreground-color);
 }
 
+.calculator_back_background {
+    background-color: var(--back-background-color);
+    border: 4px solid var(--border);
+    box-shadow: 9px 4px 0px var(--accent-color-1);
+    border-radius: 4px;
+    border-radius: 4px;
+    padding: 3px 0 0 3px;
+}
+
 .calculator_container {
+    /* width: 50rem; */
+    /* margin: 3px 0 0 3px; */
     background-color: var(--secodary-background);
+    display: grid;
+    /* flex-direction: column; */
+    grid-template-columns: 1fr 0.2fr;
+    grid-template-rows: 0.4fr 1fr;
+}
+
+.keyboard_container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 1rem;
 }
 
 .btn {
@@ -42,4 +73,70 @@ body {
     height: 3rem;
     color: var(--foreground-color);
     background-color: var(--secodary-background);
+}
+
+.keypad {
+    display: grid;
+    margin: 0.5rem;
+}
+
+.keypad.numbers {
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.keypad.function {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.keypad.control {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.screen_container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(206, 206, 206);
+}
+
+.screen_container input {
+    width: 100%;
+    height: 100%;
+    font-size: 1.5rem;
+    text-align: right;
+    padding: 0.5rem;
+    border: none;
+    background-color: var(--secodary-background);
+    color: var(--foreground-color);
+    border-bottom: 1px solid var(--border);
+    outline: none;
+}
+
+.screen_container input:focus {
+    border-bottom: 1px solid var(--accent-color-2);
+}
+
+.dot {
+    width: 2px;
+    height: 2px;
+    background-color: var(--accent-color-1);
+    border-radius: 50%;
+    display: inline-block;
+    margin: 2px;
+}
+
+.error_container {
+    width: 100%;
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100px; /* Altezza del container */
+    /* background-color: var(--secodary-background); */
+}
+
+.error_container div {
+    width: 100%;
 }
