--- a/Calcolatrice/styles/app.css
+++ b/Calcolatrice/styles/app.css
@@ -69,10 +69,28 @@ body {
 }
 
 .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 4rem;
     height: 3rem;
     color: var(--foreground-color);
     background-color: var(--secodary-background);
+}
+
+.btn.equals {
+    grid-column: 1 / 3;
+    border-radius: 0 0 4px 0;
+    background-color: none;
+    border: 1px solid var(--accent-color-2);
+    color: var(--accent-color-2);
+    border-radius: 8px;
+    transition: all 0.3s ease-in-out;
+}
+
+.btn.equals:hover {
+    background-color: var(--accent-color-2);
+    color: var(--secodary-background);
 }
 
 .keypad {
@@ -96,12 +114,13 @@ body {
 .screen_container {
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
     background-color: rgb(206, 206, 206);
 }
 
-.screen_container input {
+/* .screen_container input {
     width: 100%;
     height: 100%;
     font-size: 1.5rem;
@@ -116,7 +135,32 @@ body {
 
 .screen_container input:focus {
     border-bottom: 1px solid var(--accent-color-2);
+} */
+
+.calculator_screen {
+    width: 100%;
+    height: 100%;
+    font-size: 1.5rem;
+    /* text-align: right; */
+    padding: 0.5rem;
+    border: none;
+    background-color: var(--secodary-background);
+    color: var(--foreground-color);
+    border-bottom: 1px solid var(--border);
+    outline: none;
+
+    display: grid;
+    grid-template-columns: 1fr 0.2fr;
+    grid-template-rows: 1fr;
 }
+
+.calculator_screen .result {
+    white-space: nowrap;
+}
+
+/* .calculator_screen .expression {
+    text-align: left;
+} */
 
 .dot {
     width: 2px;
@@ -139,4 +183,10 @@ body {
 
 .error_container div {
     width: 100%;
+}
+
+.cursor {
+    /* border: 2px solid var(--accent-color-1); Evidenziazione del cursore */
+    border: 2px solid blue; /* Evidenziazione del cursore */
+    margin: -2px;
 }
