--- a/PrimoEsercizioMySQL/style/style.css
+++ b/PrimoEsercizioMySQL/style/style.css
@@ -1,14 +1,79 @@
-:root {
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+/* :root {
     --primary-background: #09090b;
     --secondary-background: #18181a;
+} 
+*/
+
+@layer base {
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 240 10% 3.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 240 10% 3.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 240 10% 3.9%;
+        --primary: 240 5.9% 10%;
+        --primary-foreground: 0 0% 98%;
+        --secondary: 240 4.8% 95.9%;
+        --secondary-foreground: 240 5.9% 10%;
+        --muted: 240 4.8% 95.9%;
+        --muted-foreground: 240 3.8% 46.1%;
+        --accent: 240 4.8% 95.9%;
+        --accent-foreground: 240 5.9% 10%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 240 5.9% 90%;
+        --input: 240 5.9% 90%;
+        --ring: 240 5.9% 10%;
+        --radius: 0.5rem;
+        --chart-1: 12 76% 61%;
+        --chart-2: 173 58% 39%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
+    }
+
+    .dark {
+        --background: 240 10% 3.9%;
+        --foreground: 0 0% 98%;
+        --card: 240 10% 3.9%;
+        --card-foreground: 0 0% 98%;
+        --popover: 240 10% 3.9%;
+        --popover-foreground: 0 0% 98%;
+        --primary: 0 0% 98%;
+        --primary-foreground: 240 5.9% 10%;
+        --secondary: 240 3.7% 15.9%;
+        --secondary-foreground: 0 0% 98%;
+        --muted: 240 3.7% 15.9%;
+        --muted-foreground: 240 5% 64.9%;
+        --accent: 240 3.7% 15.9%;
+        --accent-foreground: 0 0% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 240 3.7% 15.9%;
+        --input: 240 3.7% 15.9%;
+        --ring: 240 4.9% 83.9%;
+        --chart-1: 220 70% 50%;
+        --chart-2: 160 60% 45%;
+        --chart-3: 30 80% 55%;
+        --chart-4: 280 65% 60%;
+        --chart-5: 340 75% 55%;
+    }
+}
+
+* {
+    box-sizing: border-box;
 }
 
 body {
-    background-color: var(--secondary-background);
-    color: #e2e2e2;
+    background-color: hsl(var(--secondary));
+    color: hsl(var(--foreground));
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    font-family: "Inter", serif;
 }
 
 form {
@@ -29,8 +94,50 @@ form .inputContainer {
 
 .pageContainer {
     height: 100vh;
+    display: flex;
+    flex-direction: row;
+    padding: 0.5rem;
 }
 
 .sideBar {
+    /* background-color: bisque; */
     height: 100vh;
+    width: 15rem;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+}
+
+a {
+    text-decoration: none;
+    color: hsl(var(--foreground));
+}
+
+.linksContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 0.15rem;
+}
+
+.linksContainer .link {
+    width: 100%;
+    background-color: hsl(var(--secondary));
+    border-radius: var(--radius);
+    color: hsl(var(--secondary-foreground));
+    /* border: solid 1px hsl(var(--border)); */
+    padding: 0.7rem 1rem;
+    transition: all cubic-bezier(0.4, 0, 0.2, 1) 0.15s;
+}
+
+.linksContainer .link:hover {
+    background-color: hsl(var(--primary));
+    /* background-color: hsl(var(--muted)); */
+    color: hsl(var(--primary-foreground));
+}
+
+.mainContent {
+    background-color: hsl(var(--background));
+    height: 100%;
+    width: 100%;
+    border-radius: var(--radius);
 }
