--- a/Jukebox/styles/global/navbar.css
+++ b/Jukebox/styles/global/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     font-size: 1rem;
-    font-weight: bold;
+    font-weight: 600;
     color: var(--foreground);
     margin: 0.688em 0;
 
