--- a/Jukebox/styles/global/song.css
+++ b/Jukebox/styles/global/song.css
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: column;
     width: 250px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.song_item:hover {
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 .song_item .song_image {
@@ -14,6 +20,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 .song_item .song_details {
@@ -45,6 +53,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: center;
 }
 
 .song_details .song_artist {
