feat: create artist page

--- a/Jukebox/styles/main.css
+++ b/Jukebox/styles/main.css
@@ -32,7 +32,7 @@ body {
 }
 
 .player_section {
-    background-color: #b7b1f2;
+    background-color: var(--background);
     position: fixed;
     height: 100%;
     right: 0px;
